--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@
 
 <div class="wrapper-page">
 
-  <a href="index.html" class="logo">
-     <!-- <img src="assets/images/logo-sm.png" alt="" height="22" class="logo-small"> -->
-     <img src="assets/images/RP.png" alt="" height="450" class="logo-large">
 
- </a>
-<h4 align="center" style="color:#0D0103;">{{ under construction }}</h4>
+ <a class="navbar-brand" href="#"><img src="assets/images/RP.png" class="img-responsive img-rounded" style="max-height: 450px;max-width: 100%; ">
+ <P><h4 align="center" style="color:#0D0103;">{{ under construction }}</h4></P></a>
+<!-- <h4 align="center" style="color:#0D0103;">{{ under construction }}</h4> -->
 
 </div>
 
@@ -61,6 +59,8 @@
 
         <!-- App js -->
         <script src="assets/js/app.js"></script>
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     </body>
 </html>
