--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="wrapper-page">
 
 
- <a class="navbar-brand" href="#"><img src="assets/images/RP.png" class="img-responsive img-rounded" style="max-height: 450px;max-width: 100%; ">
+ <a class="navbar-brand" href="#"><img src="assets/images/RP.png" class="img-responsive img-rounded" style="max-height: 100%;max-width: 100%; ">
  <P><h4 align="center" style="color:#0D0103;">{{ under construction }}</h4></P></a>
 <!-- <h4 align="center" style="color:#0D0103;">{{ under construction }}</h4> -->
 
