--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Riskpin</title>
         <meta content="Admin Dashboard" name="description" />
         <meta content="Themesbrand" name="author" />
@@ -16,13 +16,13 @@
         <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/icons.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
-          <style>
+        <style>
         @media only screen and (max-width: 768px) {
-  /* For mobile phones: */
-  [class*="col-"] {
-    width: 100%;
-  }
-}
+		  /* For mobile phones: */
+		  [class*="col-"] {
+			width: 100%;
+		  }
+		}
         </style>
 
     </head>
@@ -33,22 +33,14 @@
         <!-- Loader -->
         <div id="preloader"><div id="status"><div class="spinner"></div></div></div>
 
-
-
         <!-- Begin page -->
         <div class="accountbg"></div>
 
-<div class="wrapper-page">
-
-
- <a class="navbar-brand" href="#"><img src="assets/images/RP.png" class="img-responsive img-rounded" style="max-height: 100%;max-width: 100%; ">
- <P><h4 align="center" style="color:#0D0103;">{{ under construction }}</h4></P></a>
-<!-- <h4 align="center" style="color:#0D0103;">{{ under construction }}</h4> -->
-
-</div>
-
-
-
+		<div class="wrapper-page">
+			 <a class="navbar-brand" href="#"><img src="assets/images/RP.png" class="img-responsive img-rounded" style="max-height: 100%;max-width: 100%; ">
+			 <P><h4 align="center" style="color:#0D0103;">{{ under construction }}</h4></P></a>
+			<!-- <h4 align="center" style="color:#0D0103;">{{ under construction }}</h4> -->
+		</div>
 
         <!-- jQuery  -->
         <script src="assets/js/jquery.min.js"></script>
@@ -59,8 +51,8 @@
 
         <!-- App js -->
         <script src="assets/js/app.js"></script>
-                <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
     </body>
 </html>
