--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="manifest" href="https://asset.superb-ai.com/assets/img/favicon/site.webmanifest">
     <link rel="mask-icon" href="https://asset.superb-ai.com/assets/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="assets/images/Logo_569211018.png">
-    <link rel="stylesheet" type="text/css" href="assets/css/slick-theme.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css1/slick-theme.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/slick.css" />
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="https://asset.superb-ai.com/assets/img/favicon/browserconfig.xml">
@@ -27,9 +27,9 @@
     <link href="https://fonts.googleapis.com/css?family=Hind|Questrial|Courgette|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/academicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
-    <link href="assets/css/sweetalert2.min.css" rel="stylesheet">
-    <link href="assets/css/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="assets/css1/sweetalert2.min.css" rel="stylesheet">
+    <link href="assets/css1/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css1/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Risk-Pin Index</title>
 </head>
@@ -225,14 +225,6 @@
                                 <br />One stop shop to manage privacy.
                             </p>
                         </div>
-                        <!--
-                        <div>
-                            <p class="TextEmphasize Text--grey-dark u-m-t-small" data-aos="reveal-up" data-aos-duration="600" data-aos-delay="300">Up to 10x faster and<br />3x fewer errors</p>
-                            <p class="Text TextEmphasize--sub Text--grey-dark u-m-t-mini" data-aos="reveal-up" data-aos-duration="600" data-aos-delay="300">than manual labor
-                                without
-                                AI</p>
-                        </div>
-                        -->
                     </div>
                     <div class="Grid--2">
                         <video class="Image Difference__video"
@@ -245,60 +237,7 @@
                 </div>
             </div>
         </div>
-
-        <!--
-        <div class="Page Page--paddingSmall Page--noTopPadding">
-            <div class="Container">
-                <div
-                    class="Grid Grid--respond-width-800 Grid--respond-width-800--column">
-                    <div class="Grid--1 Grid--1--gutterSmall u-center" data-aos="reveal-right" data-aos-duration="600" data-aos-delay="100">
-                        <div class="Difference Card Card--noPadding">
-                            <img class="Difference__image"
-                                src="assets/img/home/superior_quality.png"
-                                alt="superior quality">
-                            <div class="Difference__textBox">
-                                <p class="Header Header--sub Header--orange-dark u-m-t-small">Superior quality assurance</p>
-                                <p class="Text u-m-t-mini Text--small">
-                                    Our labels are inspected by both AI and in-house professionals to guarantee
-                                    bullet-proof quality, superior to crowdsourced manual labor.
-                                </p>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Grid--1 Grid--1--gutterSmall u-center" data-aos="reveal-right" data-aos-duration="600" data-aos-delay="200">
-                        <div class="Difference Card Card--noPadding">
-                            <img class="Difference__image"
-                                src="assets/img/home/gets_better_nobox.png" alt="gets better">
-                            <div class="Difference__textBox">
-                                <p class="Header Header--sub Header--orange-dark u-m-t-small">Gets better as you go</p>
-                                <p class="Text u-m-t-mini Text--small">
-                                    Compared to static, one-size-fits-all manual labeling services, our AI adapts to
-                                    your specific labeling task and provides faster and cheaper training data over time.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Grid--1 Grid--1--gutterSmall u-center" data-aos="reveal-right" data-aos-duration="600" data-aos-delay="300">
-                        <div class="Difference Card Card--noPadding">
-                            <img class="Difference__image"
-                                src="assets/img/home/guaranteed_data.png"
-                                alt="guaranteed data">
-                            <div class="Difference__textBox">
-                                <p class="Header Header--sub Header--orange-dark u-m-t-small">Guaranteed data security</p>
-                                <p class="Text u-m-t-mini Text--small">
-                                    Crowdsourcing can lead to compromised data security and privacy. We make sure your
-                                    data never gets out to the public and only authorized personnel access your data.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
--->
-    </div>
-</section>
+    </section>
     <!--
     <section>
         <div class="Page Page--purple" id="how-the-process-works">
