--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="manifest" href="https://asset.superb-ai.com/assets/img/favicon/site.webmanifest">
     <link rel="mask-icon" href="https://asset.superb-ai.com/assets/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="assets/images/Logo_569211018.png">
-    <link rel="stylesheet" type="text/css" href="assets/css1/slick-theme.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/slick-theme.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/slick.css" />
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="https://asset.superb-ai.com/assets/img/favicon/browserconfig.xml">
@@ -27,9 +27,9 @@
     <link href="https://fonts.googleapis.com/css?family=Hind|Questrial|Courgette|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/academicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
-    <link href="assets/css1/sweetalert2.min.css" rel="stylesheet">
-    <link href="assets/css1/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css1/style.css">
+    <link href="assets/css/sweetalert2.min.css" rel="stylesheet">
+    <link href="assets/css/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Risk-Pin Index</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
