--- a/index1.html
+++ b/index1.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta property="og:image:width" content="279">
     <meta property="og:image:height" content="279">
-    <meta property="og:title" content="Superb AI Inc.">
+    <meta property="og:title" content="Risk-Pin">
     <meta property="og:description"
         content="AI-Powered Training Data
     Superb AI uses AI to customize your training data, all the way from raw data collection to labeling up to 10x faster than manual labor. Stop wasting your time. Save weeks of your work.">
@@ -19,9 +19,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css1/slick-theme.css" />
     <link rel="stylesheet" type="text/css" href="assets/css1/slick.css" />
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="https://asset.superb-ai.com/assets/img/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
-    <meta name="google-site-verification" content="4KFKp23Z3pDhI3w6P5_qq2jjvnbdtvU_10U85pVSl3U" />
     <link rel="stylesheet" href="assets/css1/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Hind|Questrial|Courgette|Roboto" rel="stylesheet">
