--- a/index1.html
+++ b/index1.html
@@ -128,8 +128,8 @@
                             <p class="Header--cover__description">
                                 &#128455;  Are you looking for a easy to use cloud based application to help manage GDPR end to end
                             </p>  
-                        </div>
-                        <div style="width:50%; float:right;">
+                       <!-- </div> -->
+                      <!--  <div style="width:50%; float:right;"> -->
                             <p class="Header--cover__description" >
                                 &#128455; Do you want to identify and resolve GDPR exposures centrally
                             </p>
