--- a/index1.html
+++ b/index1.html
@@ -119,6 +119,7 @@
                         <div style="width:100%; float:left;">
                             <p class="Header--cover__description" >
                                 &#128455; Do you want to demonstrate sound GDPR compliance
+                                &#128455;  Do you want to be seen as professional, safe and rubust
                             </p>
                               
                             <p class="Header--cover__description">
