--- a/index1.html
+++ b/index1.html
@@ -123,7 +123,7 @@
                         
                     </p>
                     
-
+                    <p> <h2> Click below if your answer is <b> "YES"  </b> </h2> </p>
                     <div class="u-m-t-medium">
                         <a class="Button Button--white Cover__button u-button-m-r" href="#" data-aos="reveal-up" data-aos-duration="700" data-aos-delay="300">REQUEST QUOTE</a>
                         <a class="Button Button--red Cover__button" href="#" data-aos="reveal-up" data-aos-duration="700" data-aos-delay="400">EXPLORE</a>
