--- a/index1.html
+++ b/index1.html
@@ -123,7 +123,7 @@
                         <br /> &nbsp; &nbsp; compliance with minimal effort or specialist expertise
                         <br />
                         <br />
-                        <br /><h2> Click below if your answer is <b> "YES"  </b> </h2>
+                        <br /> &nbsp; &nbsp; if you answer is 'YES' to any of the above pointers, Click Below!
                     </p>
                     
                     
