--- a/index1.html
+++ b/index1.html
@@ -120,14 +120,14 @@
                         <br /> &#10004; Are you looking for a easy to use cloud based application to help manage GDPR end to end
                         <br /> &#10004; Do you want to identify and resolve GDPR exposures centrally
                         <br /> &#10004; Do you want an application that is simple to use, affordable and is focussed on helping you achieve 
-                        <br /> &nbsp; &nbsp; compliance with minimal effort or specialist expertise
-                        <br />                
+                        <br /> &nbsp; &nbsp; compliance with minimal effort or specialist expertise                                   
                         <br /> &nbsp; &nbsp; if you answer is 'YES' to any of the above pointers, Scroll Down & Explore!
                     </p>
-                    <br />
+                    
+                    <div class="u-m-t-medium">
                     <a class="Button Button--white Cover__button u-button-m-r" href="#" data-aos="reveal-up" data-aos-duration="700" data-aos-delay="300">REQUEST QUOTE</a>
                     <a class="Button Button--red Cover__button" href="#" data-aos="reveal-up" data-aos-duration="700" data-aos-delay="400">EXPLORE</a>
-                    
+                    </div>
 
                 </div>
                 <div class="image_cover">
