--- a/index1.html
+++ b/index1.html
@@ -115,12 +115,12 @@
                 <div class="Cover__text">
                     <h1 class="Header Header--cover" data-aos="reveal-up" data-aos-duration="700" style="font-size: 35px;">GDPR Compliance Management for Start-Ups</h1>
                     <p class="Header--cover__description" data-aos="reveal-up" data-aos-duration="700" data-aos-delay="100">
-                         &#10004; Do you want to demonstrate sound GDPR compliance
+                         &#10004; Do you want to demonstrate sound GDPR compliance, identify and resolve GDPR exposures centrally
                         <br /> &#10004; Do you want to be seen as professional, safe and robust
-                        <br /> &#10004; Are you looking for a easy to use cloud based application to help manage GDPR end to end
-                        <br /> &#10004; Do you want to identify and resolve GDPR exposures centrally
+                        <br /> &#10004; Are you looking for a easy to use cloud based application to help manage GDPR end to end                        
                         <br /> &#10004; Do you want an application that is simple to use, affordable and is focussed on helping you achieve 
-                        <br /> &nbsp; &nbsp; compliance with minimal effort or specialist expertise                                   
+                        <br /> &nbsp; &nbsp; compliance with minimal effort or specialist expertise
+                        <br />
                         <br /> &nbsp; &nbsp; if you answer is 'YES' to any of the above pointers, Scroll Down & Explore!
                     </p>
                     
