--- a/index1.html
+++ b/index1.html
@@ -121,7 +121,7 @@
                         <br /> &#10004; Do you want an application that is simple to use, affordable and is focussed on helping you achieve 
                         <br /> &nbsp; &nbsp; compliance with minimal effort or specialist expertise
                         <br />
-                        <br /> &nbsp; &nbsp; if you answer is 'YES' to any of the above pointers, Scroll Down & Explore!
+                        <br /> &nbsp; &nbsp; if your answer is 'YES' to any of the above pointers, Scroll Down & Explore!
                     </p>
                     
                     <div class="u-m-t-medium">
