--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta property="og:image:width" content="279">
-    <meta property="og:image:height" content="279">
-    <meta property="og:title" content="Superb AI Inc.">
-    <meta property="og:description"
-        content="AI-Powered Training Data
-    Superb AI uses AI to customize your training data, all the way from raw data collection to labeling up to 10x faster than manual labor. Stop wasting your time. Save weeks of your work.">
-    <meta property="og:image" content="assets/asset.superb-ai.com/assets/img/logo/og-image.jpg">
+
+    <meta property="og:title" content="RiskPin | General Data Protection Regulation (GDPR)">
+    <meta property="og:description" content="RiskPin is a 360 degree solution which covers all aspects of your organizations' maturity to meet legal requirements set by European Union (EU) in general and the General Data Protection Regulation (GDPR) in particular.">
+    <meta property="og:image" content="https://www.riskpin.com/assets/images/RP.png">
+
     
     <link rel="manifest" href="https://asset.superb-ai.com/assets/img/favicon/site.webmanifest">
     <link rel="mask-icon" href="https://asset.superb-ai.com/assets/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
