--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!-- Primary Meta Tags -->
+    <title>RiskPin | General Data Protection Regulation (GDPR)</title>
+    <meta name="title" content="RiskPin | General Data Protection Regulation (GDPR)">
+    <meta name="description" content="RiskPin is a 360 degree solution which covers all aspects of your organizations' maturity to meet legal requirements set by European Union (EU) in general and the General Data Protection Regulation (GDPR) in particular.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.riskpin.com/">
     <meta property="og:title" content="RiskPin | General Data Protection Regulation (GDPR)">
     <meta property="og:description" content="RiskPin is a 360 degree solution which covers all aspects of your organizations' maturity to meet legal requirements set by European Union (EU) in general and the General Data Protection Regulation (GDPR) in particular.">
     <meta property="og:image" content="https://www.riskpin.com/assets/images/RP.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.riskpin.com/">
+    <meta property="twitter:title" content="RiskPin | General Data Protection Regulation (GDPR)">
+    <meta property="twitter:description" content="RiskPin is a 360 degree solution which covers all aspects of your organizations' maturity to meet legal requirements set by European Union (EU) in general and the General Data Protection Regulation (GDPR) in particular.">
+    <meta property="twitter:image" content="https://www.riskpin.com/assets/images/RP.png">
 
     
     <link rel="manifest" href="https://asset.superb-ai.com/assets/img/favicon/site.webmanifest">
